vlib/v/checker/tests/var_used_before_declaration.vv
fn main() {
    println(x)
    x := 'hello v'
}